<resources>
    <string name="app_name">COMP2000</string>
    <string name="calendar">Calendar</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="back_arrow">←</string>
    <string name="month_year">Month Year</string>
    <string name="forward_arrow">→</string>
    <string name="back">← Back</string>
    <string name="sign_out">Sign Out</string>
    <string name="changes_discarded">Changes have been discarded</string>
    <string name="go_to_main">Go to main</string>
    <string name="changes_saved">Changes have been saved</string>
    <string name="your_details">Your Details</string>
    <string name="first_name_eg1">First Name: John</string>
    <string name="last_name_eg1">Last Name: Smith</string>
    <string name="date_of_birth_eg1">Date of Birth: 01/01/2000</string>
    <string name="role_eg1">Role: Developer</string>
    <string name="start_date_eg1">Start Date: 01/01/2024</string>
    <string name="edit_your_details">Edit your Details</string>
    <string name="upcoming_holidays">Upcoming Holidays</string>
    <string name="start_date_1">Start Date: 01/01/2024</string>
    <string name="end_date_1">End Date: 01/05/2024</string>
    <string name="start_date_2">Start Date: 01/06/2024</string>
    <string name="end_date_2">End Date: 01/10/2024</string>
    <string name="signed_out_message">You have been signed out.</string>
    <string name="pending_holiday_requests">Pending Holiday Requests</string>
    <string name="rejected_holiday_requests">Rejected Holiday Requests</string>
    <string name="previous_holidays">Previous Holidays</string>
    <string name="remaining_allowance">Remaining Allowance</string>
    <string name="annual_allowance">Annual Allowance</string>
    <string name="holiday_allowance">Holiday Allowance</string>
    <string name="allow_notifications">Allow Notifications?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="settings_2">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="save_changes">Save Changes</string>
    <string name="request_holiday">Request Holiday</string>
    <string name="start_date">Start Date</string>
    <string name="enter_start_date">Enter start date</string>
    <string name="end_date">End Date</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="how_many_days">How Many Days</string>
    <string name="enter_number_of_days">Enter number of days</string>
    <string name="notes">Notes</string>
    <string name="enter_notes">Enter any notes</string>
    <string name="submit">Submit</string>
    <string name="preferences_saved">Preferences have been saved</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOG IN</string>
    <string name="notification_message_1">Request No. 123 has been approved.</string>
    <string name="notification_message_2">Request No. 456 has been rejected.</string>
    <string name="seen">Seen</string>
    <string name="welcome_message">Hello Josh</string>
    <string name="view_edit_details">View/Edit My Details</string>
    <string name="view_remaining_allowance">View Remaining Allowance</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="holiday_request_successful">Holiday has been requested successfully</string>

</resources>