<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    android:padding="16dp">

    <!-- Top bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/calendar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:background="#FFFFFF"
            android:layout_alignParentStart="true"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:background="#FFFFFF"
            android:layout_centerHorizontal="true"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:background="#FFFFFF"
            android:layout_alignParentEnd="true"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/title_edit_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_details"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:padding="8dp"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:padding="16dp"
        android:elevation="4dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E0E0E0"
                    android:padding="10dp"
                    android:inputType="textPersonName"
                    android:autofillHints="givenName"
                    android:hint="@string/first_name"/>
            </LinearLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E0E0E0"
                    android:padding="10dp"
                    android:inputType="textPersonName"
                    android:autofillHints="familyName"
                    android:hint="@string/last_name"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edit_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0E0E0"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:inputType="date"
            android:autofillHints="dateOfBirth"
            android:hint="@string/date_of_birth"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0E0E0"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:inputType="textMultiLine"
            android:autofillHints="addressLine"
            android:hint="@string/address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postcode"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edit_postcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0E0E0"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:inputType="textPostalAddress"
            android:autofillHints="postalCode"
            android:hint="@string/postcode"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0E0E0"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:hint="@string/email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0E0E0"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:inputType="phone"
            android:autofillHints="telephoneNumber"
            android:hint="@string/phone_number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/discard_changes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discard_changes"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_changes"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:layout_marginStart="8dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:background="#FFFFFF"
            android:textColor="#000000"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:background="#FFFFFF"
            android:textColor="#000000"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

</LinearLayout>
